--- a/_includes/layout.njk
+++ b/_includes/layout.njk
@@ -21,5 +21,6 @@ title: 用正则啊
       {% include "comment.njk" ignore missing %}
     </main>
     {# {% include "footer.njk" ignore missing %} #}
+    {% include "statistic.njk" ignore missing %}
   </body>
 </html>
