--- a/_includes/header.njk
+++ b/_includes/header.njk
@@ -1,3 +1,5 @@
 <header class="header">
-  <main class="container">搞什么搞，用正则啊</main>
+  <main class="container">
+  <img src="/images/favicon.png" />&nbsp;搞什么搞，用正则啊
+  </main>
 </header>
