--- a/_includes/layout.njk
+++ b/_includes/layout.njk
@@ -7,6 +7,7 @@ title: 用正则啊
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="/images/favicon.png">
     <title>{{ title }}</title>
     {% inlinecss "base.css" %}
     {% inlinecss "header.css" %}
