--- a/_includes/layout.njk
+++ b/_includes/layout.njk
@@ -20,8 +20,8 @@ title: 用正则啊
         {{ content | safe }}
       </article>
       {% include "comment.njk" ignore missing %}
+      {% include "copyright.njk" ignore missing %}
     </main>
-    {# {% include "footer.njk" ignore missing %} #}
     {% include "statistic.njk" ignore missing %}
   </body>
 </html>
