--- a/css/base.css
+++ b/css/base.css
@@ -32,6 +32,13 @@ body {
   display: block;
 }
 
+.container.copyright {
+  display: flex;
+  justify-content: center;
+  font-size: 14px;
+  padding: 8px 0;
+}
+
 pre code {
   display: block;
   font-size: 12px;
